tests/NormalTests/paczka1/fuzzy1/60525361.err
Error in line 1: alsoMQoU0M S537 25,2
Error in line 17: alsoMQoU0M A685 41,9
Error in line 21: A341 A685 2,1
